--- a/scripts/install
+++ b/scripts/install
@@ -39,6 +39,8 @@ $ROOT/install-pkgs \
     -l $log_file ${upgrade_flag} --os ${os} \
     --pkgs polybar,rofi,dbus-python,picom,zsh,networkmanager-dmenu-git,jgmenu,numix-circle-icon-theme-git,skippy-xd-git
 
+echo
+
 #==========================================
 # Install dotfiles according to os
 #==========================================
