--- a/common/config/termite/install
+++ b/common/config/termite/install
@@ -3,4 +3,5 @@
 ROOT=$(dirname $0)
 
 sudo rm -rf ~/.config/termite/config > /dev/null 2>&1
+mkdir ~/.config/termite > /dev/null 2>&1
 ln -sf $ROOT/config ~/.config/termite/config
