--- a/common/config/i3/install
+++ b/common/config/i3/install
@@ -3,4 +3,7 @@
 ROOT=$(dirname $0)
 
 sudo rm -rf ~/.config/i3/config > /dev/null 2>&1
+
+mkdir ~/.config/i3 > /dev/null 2>&1
+
 ln -sf $ROOT/config ~/.config/i3/config
