--- a/common/config/networkmanager-dmenu/install
+++ b/common/config/networkmanager-dmenu/install
@@ -3,4 +3,7 @@
 ROOT=$(dirname $0)
 
 sudo rm -rf ~/.config/networkmanager-dmenu/config.ini > /dev/null 2>&1
+
+mkdir ~/.config/networkmanager-dmenu > /dev/null 2>&1
+
 ln -sf $ROOT/config.ini ~/.config/networkmanager-dmenu/config.ini
