Added wallpaper setter with blur management

--- a/scripts/install
+++ b/scripts/install
@@ -51,6 +51,9 @@ pkgs=(
     skippy-xd
     yarn
     nvm
+    wmctrl
+    graphicsmagick
+    feh
 )
 pkgs=$(printf ",%s" "${pkgs[@]}")
 pkgs=${pkgs:1}
