--- a/default-config/install
+++ b/default-config/install
@@ -10,12 +10,27 @@ sudo rm -rf ~/.gitconfig > /dev/null 2>&1
 
 #==========================================
 # Create symlinks in the home folder
-# Allow overriding with files of matching names in the custom-configs dir
+# Allow overriding with files of matching names in the custom-config dir
 #==========================================
 touch ~/.gitconfig
 
 if [ -n "$(find $dotfiles_dir/custom-config -name gitconfig)" ]; then
     ln -sf $dotfiles_dir/custom-config/gitconfig ~/.gitconfig
 else
-    ln -sf $ROOT/gitconfig ~/.gitconfig
+    cp -f $ROOT/gitconfig $dotfiles_dir/custom-config/gitconfig
+    ln -sf $dotfiles_dir/custom-config/gitconfig ~/.gitconfig
 fi
+
+printf "Setting up git...\\n"
+
+defaultName=$( git config --global user.name )
+defaultEmail=$( git config --global user.email )
+defaultGithub=$( git config --global github.user )
+
+read -rp "Name [$defaultName]: " name
+read -rp "Email [$defaultEmail]: " email
+read -rp "Github username [$defaultGithub]: " github
+
+git config --global user.name "${name:-$defaultName}"
+git config --global user.email "${email:-$defaultEmail}"
+git config --global github.user "${github:-$defaultGithub}"
