--- a/scripts/install
+++ b/scripts/install
@@ -23,7 +23,7 @@ variables["--pkgs"]="pkgs";
 os=${os:-""}
 time_str=$(date +'%m-%d-%y_%H:%M:%S')
 log_file=${log_file:-"/tmp/install_progress_log_$time_str.txt"}
-dotfiles_dir=${dotfiles_dir:-"$HOME/dotfiles"}
+dotfiles_dir=${dotfiles_dir:"$HOME/dotfiles"}
 
 [ ! -f "$log_file" ] && touch $log_file
 
