--- a/install
+++ b/install
@@ -31,10 +31,12 @@ pkgs=(
     # fonts
     noto-fonts
     noto-fonts-extra
+    terminus-font
     ttf-anonymous-pro
     ttf-dejavu
-    ttf-linux-libertine
+    ttf-fira-code
     ttf-liberation
+    ttf-linux-libertine
 )
 pkgs=$(printf ",%s" "${pkgs[@]}")
 pkgs=${pkgs:1}
