--- a/install
+++ b/install
@@ -37,21 +37,21 @@ pkgs=(
     picom
     # utils
     xfce4-about
-    xfce4-display-settings
-    xfce4-mime-settings
+    xfce4-display
+    xfce4-mime
     xfce4-popup-applicationsmenu
-    xfce4-power-manager-settings
-    xfce4-accessibility-settings
+    xfce4-power-manager
+    xfce4-accessibility
     xfce4-find-cursor
-    xfce4-mouse-settings
+    xfce4-mouse
     xfce4-popup-directorymenu
-    xfce4-settings-editor
-    xfce4-appearance-settings
-    xfce4-keyboard-settings
+    xfce4-editor
+    xfce4-appearance
+    xfce4-keyboard
     xfce4-panel
     xfce4-popup-windowmenu
-    xfce4-settings-manager
-    xfce4-color-settings
+    xfce4-manager
+    xfce4-color
     xfce4-kiosk-query
     xfce4-pm-helper
     xfce4-power-manager
