--- a/default-config/install
+++ b/default-config/install
@@ -15,6 +15,7 @@ dotfiles_dir="$ROOT/.."
 #==========================================
 # Delete existing dot files and folders
 #==========================================
+sudo rm -rf ~/.dotfiles.config.env > /dev/null 2>&1
 sudo rm -rf ~/.gitconfig > /dev/null 2>&1
 sudo rm -rf ~/.xprofile > /dev/null 2>&1
 sudo rm -rf ~/.Xresources > /dev/null 2>&1
@@ -23,10 +24,12 @@ sudo rm -rf ~/.Xresources > /dev/null 2>&1
 # Create symlinks in the home folder
 # Allow overriding with files of matching names in the custom-config dir
 #==========================================
+touch ~/.dotfiles.config.env
 touch ~/.gitconfig
 touch ~/.xprofile
 touch ~/.Xresources
 
+create_symlink dotfiles.config.env
 create_symlink gitconfig
 create_symlink xprofile
 create_symlink Xresources
@@ -35,9 +38,9 @@ sudo chmod +x ~/.xprofile
 
 printf "Setting up git...\\n"
 
-defaultName=$( git config --global user.name )
-defaultEmail=$( git config --global user.email )
-defaultGithub=$( git config --global github.user )
+defaultName=$(git config --global user.name)
+defaultEmail=$(git config --global user.email)
+defaultGithub=$(git config --global github.user)
 
 read -rp "Name [$defaultName]: " name
 read -rp "Email [$defaultEmail]: " email
