--- a/scripts/install
+++ b/scripts/install
@@ -31,7 +31,7 @@ if has_param '-u' "$@" || has_param '--upgrade' "$@"; then
     upgrade_flag="-u"
 fi
 
-if has_param '-c' "$@" || has_param '--clean' "$@"; then
+if has_param '-c' "$@" || has_param '--clear' "$@"; then
     clean_flag="-c"
 fi
 
@@ -49,7 +49,7 @@ echo
 #==========================================
 # Install dotfiles according to os
 #==========================================
-$ROOT/install-dotfiles -l $log_file --os $os --dotfiles-dir $dotfiles_dir $clean_flag
+$ROOT/install-dotfiles -l $log_file --os $os $clean_flag --dotfiles-dir $dotfiles_dir
 
 #==========================================
 # Set zsh as the default shell
