--- a/default-config/install
+++ b/default-config/install
@@ -4,7 +4,7 @@ create_symlink() {
     if [ -n "$(find $dotfiles_dir/custom-config -name $1)" ]; then
         ln -sf $dotfiles_dir/custom-config/$1 ~/.$1
     else
-        cp -f $ROOT/$1 $dotfiles_dir/custom-config/$1
+        cp -rf $ROOT/$1 $dotfiles_dir/custom-config/$1
         ln -sf $dotfiles_dir/custom-config/$1 ~/.$1
     fi
 }
@@ -15,24 +15,23 @@ dotfiles_dir="$ROOT/.."
 #==========================================
 # Delete existing dot files and folders
 #==========================================
-sudo rm -rf ~/.dotfiles.config.env > /dev/null 2>&1
 sudo rm -rf ~/.gitconfig > /dev/null 2>&1
 sudo rm -rf ~/.xprofile > /dev/null 2>&1
 sudo rm -rf ~/.Xresources > /dev/null 2>&1
+sudo rm -rf ~/.Xresources.d > /dev/null 2>&1
 
 #==========================================
 # Create symlinks in the home folder
 # Allow overriding with files of matching names in the custom-config dir
 #==========================================
-touch ~/.dotfiles.config.env
 touch ~/.gitconfig
 touch ~/.xprofile
 touch ~/.Xresources
 
-create_symlink dotfiles.config.env
 create_symlink gitconfig
 create_symlink xprofile
 create_symlink Xresources
+create_symlink Xresources.d
 
 sudo chmod +x ~/.xprofile
 
