--- a/common/config/i3/install
+++ b/common/config/i3/install
@@ -6,4 +6,4 @@ sudo rm -rf ~/.config/i3/config > /dev/null 2>&1
 
 mkdir ~/.config/i3 > /dev/null 2>&1
 
-ln -sf $ROOT/config ~/.config/i3/config
+ln -sf ${ROOT}/config ~/.config/i3/config
