--- a/common/config/xfce4/install
+++ b/common/config/xfce4/install
@@ -8,6 +8,6 @@ sudo rm -rf ~/.config/xfce4/helpers.rc > /dev/null 2>&1
 
 mkdir ~/.config/xfce4 > /dev/null 2>&1
 
-ln -sf $ROOT/panel ~/.config/xfce4/panel
-ln -sf $ROOT/xfconf ~/.config/xfce4/xfconf
-ln -sf $ROOT/helpers.rc ~/.config/xfce4/helpers.rc
+ln -sf ${ROOT}/panel ~/.config/xfce4/panel
+ln -sf ${ROOT}/xfconf ~/.config/xfce4/xfconf
+ln -sf ${ROOT}/helpers.rc ~/.config/xfce4/helpers.rc
