--- a/install
+++ b/install
@@ -87,7 +87,7 @@ xfce4_pkgs=(
     xfconf
 )
 
-xfce4_utils=(
+util_pkgs=(
     mousepad
     parole
     ristretto
@@ -116,12 +116,12 @@ xfce4_utils=(
     xfce4-weather-plugin
 )
 
-if [[ -n "${nodunst}" ]]; then
+if [ -n "${nodunst}" ]; then
     xfce4_pkgs+=( xfce4-notifyd )
 fi
 
-if [[ -n "${install_utils}" ]]; then
-    for util in "${xfce4_utils[@]}"; do
+if [ -n "${install_utils}" ]; then
+    for util in "${util_pkgs[@]}"; do
         printf "Add ${util} to the installation list? [y/N]: "
         
         read -r input
