--- a/default-config/install
+++ b/default-config/install
@@ -22,6 +22,7 @@ sudo rm -rf ~/.xprofile > /dev/null 2>&1
 sudo rm -rf ~/.Xresources > /dev/null 2>&1
 sudo rm -rf ~/.Xresources.d > /dev/null 2>&1
 sudo rm -rf ~/.config/polybar/modules/custom.conf > /dev/null 2>&1
+sudo rm -rf ~/.config/polybar/polybars/custom.conf > /dev/null 2>&1
 
 #==========================================
 # Create symlinks in the home folder
@@ -31,14 +32,17 @@ touch ~/.gitconfig > /dev/null 2>&1
 touch ~/.xprofile > /dev/null 2>&1
 touch ~/.Xresources > /dev/null 2>&1
 touch ~/.config/polybar/modules/custom.conf > /dev/null 2>&1
+touch ~/.config/polybar/modules/polybar.conf > /dev/null 2>&1
 
 [ ! -d $dotfiles_dir/custom-config/polybar/modules ] && mkdir -p $dotfiles_dir/custom-config/polybar/modules
+[ ! -d $dotfiles_dir/custom-config/polybar/polybars ] && mkdir -p $dotfiles_dir/custom-config/polybar/polybars
 
 create_symlink gitconfig
 create_symlink xprofile
 create_symlink Xresources
 create_symlink Xresources.d
 create_symlink "polybar/modules/custom.conf" "$HOME/.config/polybar/modules/custom.conf"
+create_symlink "polybar/polybars/custom.conf" "$HOME/.config/polybar/polybars/custom.conf"
 
 sudo chmod +x ~/.xprofile
 
